--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.10.1",
+    "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "mongoose": "^5.9.2"
   },
