--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "NODE_ENV=development nodemon ./app.js --exec babel-node"
+    "dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
+    "build": "npm run clean && npm run build-babel",
+    "start": "npm run build && node ./build/app.js",
+    "clean": "rm -rf build && mkdir build",
+    "build-babel": "babel -d ./build ./src -s"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +22,9 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.8.6",
+    "@babel/core": "^7.9.0",
     "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.8.6",
+    "@babel/preset-env": "^7.9.5",
     "@babel/register": "^7.8.6",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
