--- a/package.json
+++ b/package.json
@@ -6,28 +6,22 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
-    "build": "npm run clean && npm run build-babel",
-    "start": "npm run build && node ./build/app.js",
-    "clean": "rm -rf build && mkdir build",
-    "build-babel": "babel -d ./build ./ -s"
+    "heroku-postbuild": "npm install",
+    "start": "babel-node app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.10.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "mongoose": "^5.9.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.4",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/register": "^7.8.6",
-    "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.2"
   }
 }
