--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.10.1",
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
     "mongoose": "^5.9.2"
   },
   "devDependencies": {
-    "babel": "6.23.0",
-    "babel-cli": "6.26.0",
-    "babel-preset-env": "1.6.0",
     "nodemon": "^2.0.2"
   }
 }
