--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "apollo-server": "^2.10.1",
     "babel-cli": "^6.26.0",
+    "babel-node": "0.0.1-security",
     "babel-preset-env": "^1.7.0",
     "dotenv": "^8.2.0",
     "graphql": "^14.6.0",
