--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
     "heroku-postbuild": "npm install",
-    "start": "babel-node app.js",
+    "start": "./node_modules/.bin/babel-node app.js",
     "heroku-prune": "heroku config:set NPM_CONFIG_PRODUCTION=false YARN_PRODUCTION=false"
   },
   "keywords": [],
