--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "note-server",
   "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development nodemon ./app.js --exec babel-node",
@@ -20,9 +20,6 @@
     "mongoose": "^5.9.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-env": "^1.7.0",
     "nodemon": "^2.0.2"
   }
 }
